# Nisse

./: .gitignore  CMakeLists.txt  README.md  TODO.md  ball_profiler.sh  ball_profiler_noprint.sh  config.sh  ks_profiler.sh  ks_profiler_noprint.sh  modify_dot.py  nisse_profiler.sh  nisse_profiler_noprint.sh
docs/: Doxyfile
include/: Ball.h  Nisse.h
lib/: BallAnalysis.cpp  BallPass.cpp  BallPlugin.cpp  CMakeLists.txt  Edge.cpp  NisseAnalysis.cpp  NisseLoopAnalysis.cpp  NissePass.cpp  NissePlugin.cpp  UnionFind.cpp  aux.cpp  prof.c
src/: CMakeLists.txt  NissePropagation.cpp
tests/: print_args.c  print_args1.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
